--- a/smartkrishi/smartkrishi_app/templates/smartkrishi_app/base.html
+++ b/smartkrishi/smartkrishi_app/templates/smartkrishi_app/base.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}SmartKrishi{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'smartkrishi_app/css/style.css' %}">
 </head>
 <body>
 
   <!-- Header -->
-  <header>🌿 SmartKrishi</header>
+  <header>🌿 SmartKrishi- AI-Based Crop Doctor & Farmer Advisor </header>
 
   <!-- Navigation Bar with dynamic URLs -->
   <nav>
